Added targets and sources to CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.0.0)
+cmake_minimum_required(VERSION 3.11)
 
 # Must use GNUInstallDirs to install libraries into correct
 # locations on all platforms.
@@ -17,20 +17,62 @@ project(ProjectTemplate)
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+# Treating warnings as errors is often useful
+
+
 if( WIN32 )
     # define UNICODE and_UNICODE definition on Windows
     # Both definitions are required
     add_definitions(-DUNICODE -D_UNICODE)
 endif()
 
-#================================================
-# Let CMake look in these directories for nested
-# 'CMakeLists.txt' files to process
-#================================================
+# Allow target_sources to use relative paths
+cmake_policy(SET CMP0076 NEW)
 
+# Output binaries to ./bin
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")
+
+set (TARGETS
+  "ProjectTemplate" # Main executable
+  "Installer"       # Used to install the software onto the user's computer, setup environment, etc.
+)
+
+# Remove existing /W0-4 flag before adding the desired one
+string(REGEX REPLACE " /W[0-4]" "" CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
+string(REGEX REPLACE " /W[0-4]" "" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
+
+# Set compiler options for warnings (treat as errors)
+add_compile_options(
+  $<$<OR:$<CXX_COMPILER_ID:Clang>,$<CXX_COMPILER_ID:AppleClang>,$<CXX_COMPILER_ID:GNU>>:-Werror>
+  $<$<OR:$<CXX_COMPILER_ID:Clang>,$<CXX_COMPILER_ID:AppleClang>,$<CXX_COMPILER_ID:GNU>>:-Wall>
+  $<$<OR:$<CXX_COMPILER_ID:Clang>,$<CXX_COMPILER_ID:AppleClang>,$<CXX_COMPILER_ID:GNU>>:-Wextra>
+  $<$<OR:$<CXX_COMPILER_ID:Clang>,$<CXX_COMPILER_ID:AppleClang>,$<CXX_COMPILER_ID:GNU>>:-Wconversion>
+  $<$<OR:$<CXX_COMPILER_ID:Clang>,$<CXX_COMPILER_ID:AppleClang>,$<CXX_COMPILER_ID:GNU>>:-Wsign-conversion>
+  $<$<CXX_COMPILER_ID:MSVC>:/WX>
+  $<$<CXX_COMPILER_ID:MSVC>:/W4>)
+
+foreach(target ${TARGETS})
+  # Create the executable target
+  if( WIN32 )
+    add_executable(${target} WIN32)
+  else()
+    add_executable(${target})
+  endif()
+
+  # Add the root as an include directory: i.e. #include "common/Logging.hpp" from any level
+  target_include_directories(${target} PRIVATE ${CMAKE_SOURCE_DIR})
+endforeach()
+
+# Add libraries first to setup library include directives
 add_subdirectory(libraries)
 
+# Include public interface (for a library)
+include_directories(include)
+
+# Add each subdirectory
 add_subdirectory(common)
-# add_subdirectory(include)
+add_subdirectory(installer)
 add_subdirectory(module)
-# add_subdirectory(tools)
+add_subdirectory(tools)
