--- a/libraries/CMakeLists.txt
+++ b/libraries/CMakeLists.txt
@@ -1,1 +1,7 @@
-include_directories(spdlog/include)
+set ( LIBRARY_INCLUDES
+  "spdlog/include"
+)
+
+foreach(target ${TARGETS})
+  target_include_directories(${target} PRIVATE ${LIBRARY_INCLUDES})
+endforeach()
