--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,7 +1,7 @@
-add_subdirectory(math)
+# add_subdirectory(math)
 
 set (SRCS
-  "Fractal.cpp"
+  ""
 )
 
 target_sources(ProjectTemplate PRIVATE ${SRCS})
