--- a/module/math/CMakeLists.txt
+++ b/module/math/CMakeLists.txt
@@ -1,5 +1,6 @@
+
 set (SRCS
-  Complex.cpp
+  "Complex.cpp"
 )
 
-add_executable(ProjectTemplate SRCS)
+target_sources(ProjectTemplate PRIVATE ${SRCS})
