Wrote initial readme

--- a/.gitattributes
+++ b/.gitattributes
@@ -4,6 +4,7 @@
 *.h text eol=lf
 *.hpp text eol=lf
 *.txt   text eol=lf
+*.md   text eol=lf
 .clang-format   text eol=lf
 .gitattributes   text eol=lf
 .gitignore   text eol=lf
