Added semantic versioning

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,8 +3,9 @@
 *.cpp text eol=lf
 *.h text eol=lf
 *.hpp text eol=lf
-*.txt   text eol=lf
-*.md   text eol=lf
-.clang-format   text eol=lf
-.gitattributes   text eol=lf
-.gitignore   text eol=lf
+*.txt text eol=lf
+*.md text eol=lf
+*.cmake text eol=lf
+.clang-format text eol=lf
+.gitattributes text eol=lf
+.gitignore text eol=lf
