--- a/libraries/CMakeLists.txt
+++ b/libraries/CMakeLists.txt
@@ -5,3 +5,7 @@ set ( LIBRARY_INCLUDES
 foreach(target ${TARGETS})
   target_include_directories(${target} SYSTEM PRIVATE ${LIBRARY_INCLUDES})
 endforeach()
+
+set(gtest_force_shared_crt ON)
+add_subdirectory("googletest")
+target_include_directories("Test" SYSTEM PRIVATE "googletest/googletest/include")
