--- a/project-fractal/math/CMakeLists.txt
+++ b/project-fractal/math/CMakeLists.txt
@@ -4,3 +4,9 @@ set (SRCS
 )
 
 target_sources("Fractal" PRIVATE ${SRCS})
+
+set (TEST_SRCS
+  "Complex_Test.cpp"
+)
+
+target_sources("Test" PRIVATE ${TEST_SRCS} ${SRCS})
