--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -6,6 +6,7 @@ target_sources("Fractal" PRIVATE ${SRCS})
 
 set (TEST_SRCS
   "TestMain.cpp"
+  "Logging_Test.cpp"
 )
 
-target_sources("Test" PRIVATE ${TEST_SRCS})
+target_sources("Test" PRIVATE ${TEST_SRCS} ${SRCS})
