--- a/libraries/CMakeLists.txt
+++ b/libraries/CMakeLists.txt
@@ -6,6 +6,6 @@ foreach(target ${TARGETS})
   target_include_directories(${target} SYSTEM PRIVATE ${LIBRARY_INCLUDES})
 endforeach()
 
-set(gtest_force_shared_crt ON)
+set(gtest_force_shared_crt ON CACHE BOOL "Always use msvcrt.dll" FORCE)
 add_subdirectory("googletest")
 target_include_directories("Test" SYSTEM PRIVATE "googletest/googletest/include")
