Fixed clang-tidy warnings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,15 +25,18 @@ set(GIT_EXECUTABLE "git")
 include("tools/GetVersionFromGitTag.cmake")
 # Write common/Version.h
 file(WRITE ${CMAKE_SOURCE_DIR}/common/Version.h
-  "#define VERSION_STRING_FULL \"" ${${PROJECT_NAME}_VERSION_STRING_FULL} "\"\n"
-  "#define VERSION_STRING \"" ${${PROJECT_NAME}_VERSION_STRING} "\"\n"
-  "#define VERSION_MAJOR " ${${PROJECT_NAME}_VERSION_MAJOR} "\n"
-  "#define VERSION_MINOR " ${${PROJECT_NAME}_VERSION_MINOR} "\n"
-  "#define VERSION_PATCH " ${${PROJECT_NAME}_VERSION_PATCH} "\n"
-  "#define VERSION_TWEAK \"" ${${PROJECT_NAME}_VERSION_TWEAK} "\"\n"
-  "#define VERSION_AHEAD " ${${PROJECT_NAME}_VERSION_AHEAD} "\n"
-  "#define VERSION_MODIFIED " ${${PROJECT_NAME}_MODIFIED} "\n"
-  "#define VERSION_GIT_SHA \"" ${${PROJECT_NAME}_VERSION_GIT_SHA} "\"\n"
+  "#ifndef _COMMON_VERSION_H_\n"
+  "#define _COMMON_VERSION_H_\n\n"
+  "const constexpr char* VERSION_STRING_FULL = \"" ${${PROJECT_NAME}_VERSION_STRING_FULL} "\";\n"
+  "const constexpr char* VERSION_STRING      = \"" ${${PROJECT_NAME}_VERSION_STRING} "\";\n"
+  "const constexpr size_t VERSION_MAJOR      = " ${${PROJECT_NAME}_VERSION_MAJOR} ";\n"
+  "const constexpr size_t VERSION_MINOR      = " ${${PROJECT_NAME}_VERSION_MINOR} ";\n"
+  "const constexpr size_t VERSION_PATCH      = " ${${PROJECT_NAME}_VERSION_PATCH} ";\n"
+  "const constexpr char* VERSION_TWEAK       = \"" ${${PROJECT_NAME}_VERSION_TWEAK} "\";\n"
+  "const constexpr size_t VERSION_AHEAD      = " ${${PROJECT_NAME}_VERSION_AHEAD} ";\n"
+  "const constexpr size_t VERSION_MODIFIED   = " ${${PROJECT_NAME}_MODIFIED} ";\n"
+  "const constexpr char* VERSION_GIT_SHA     = \"" ${${PROJECT_NAME}_VERSION_GIT_SHA} "\";\n\n"
+  "#endif /* _COMMON_VERSION_H_ */\n"
 )
 
 if( WIN32 )
