--- a/.gitattributes
+++ b/.gitattributes
@@ -1,12 +1,2 @@
 # Force LF checkout for all source files
-*.c text eol=lf
-*.cpp text eol=lf
-*.h text eol=lf
-*.hpp text eol=lf
-*.txt text eol=lf
-*.md text eol=lf
-*.cmake text eol=lf
-*.py text eol=lf
-.clang-format text eol=lf
-.gitattributes text eol=lf
-.gitignore text eol=lf
+* text=auto eol=lf
