Added change project name script

--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -2,11 +2,11 @@ set (SRCS
   "Logging.cpp"
 )
 
-target_sources("Fractal" PRIVATE ${SRCS})
+target_sources("fractal" PRIVATE ${SRCS})
 
 set (TEST_SRCS
   "TestMain.cpp"
   "Logging_Test.cpp"
 )
 
-target_sources("Test" PRIVATE ${TEST_SRCS} ${SRCS})
+target_sources("test" PRIVATE ${TEST_SRCS} ${SRCS})
