--- a/project-fractal/math/CMakeLists.txt
+++ b/project-fractal/math/CMakeLists.txt
@@ -3,10 +3,10 @@ set (SRCS
   "Complex.cpp"
 )
 
-target_sources("Fractal" PRIVATE ${SRCS})
+target_sources("fractal" PRIVATE ${SRCS})
 
 set (TEST_SRCS
   "Complex_Test.cpp"
 )
 
-target_sources("Test" PRIVATE ${TEST_SRCS} ${SRCS})
+target_sources("test" PRIVATE ${TEST_SRCS} ${SRCS})
