Added create project folder and initial files script

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,11 +82,14 @@ set(CMAKE_DEBUG_POSTFIX "d")
 foreach(target ${TARGETS})
   # Create the executable target
   if(!WIN32)
+    # Looks for int main(int argc, char* argv[])
     add_executable(${target})
   elseif(${target} STREQUAL "test")
+    # Looks for int main(int argc, char* argv[])
     add_executable(${target})
     target_compile_definitions(${target} PUBLIC WIN_CONSOLE)
   else()
+    # Looks for int WINAPI WinMain(HINSTANCE hInstance, HINSTANCE hPrevInstance, char* args, int nShowCmd)
     add_executable(${target} WIN32)
   endif()
 
