--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ common/Version.h
 # Build artifacts
 build
 *.log
+
+# Exclude the files in the bin folder except files in subfolders, i.e. runtime resources
+bin/*
+!bin/**/
