--- a/project-fractal/Fractal_win32.rc
+++ b/project-fractal/Fractal_win32.rc
@@ -1,5 +1,8 @@
 #include "winver.h"
 
+#define VERSION_DEFINES
+#include "common/Version.h"
+
 #ifndef IDI_ICON1
 #define IDI_ICON1 1
 #endif
@@ -13,35 +16,35 @@
 #define EXE "fractal.exe"
 #define ICO "fractal.ico"
 
-IDI_ICON1	ICON	DISCARDABLE	ICO
+IDI_ICON1 ICON DISCARDABLE ICO
 
-VS_VERSION_INFO	VERSIONINFO
-FILEVERSION	RC_VERSION_1,RC_VERSION_2,RC_VERSION_3,RC_VERSION_4
-PRODUCTVERSION	RC_VERSION_1,RC_VERSION_2,RC_VERSION_3,RC_VERSION_4
-FILEFLAGS	0
-FILEOS		VOS_NT_WINDOWS32
-FILETYPE	VFT_APP
-FILESUBTYPE	VFT2_UNKNOWN
+VS_VERSION_INFO VERSIONINFO
+FILEVERSION VERSION_MAJOR,VERSION_MINOR,VERSION_PATCH,VERSION_AHEAD
+PRODUCTVERSION VERSION_MAJOR,VERSION_MINOR,VERSION_PATCH,VERSION_AHEAD
+FILEFLAGS 0
+FILEOS  VOS_NT_WINDOWS32
+FILETYPE VFT_APP
+FILESUBTYPE VFT2_UNKNOWN
 
 BEGIN
-	BLOCK "StringFileInfo"
-	BEGIN
-		BLOCK "040904E4"
-		BEGIN
-			VALUE "FileDescription",	DESCRIPTION
-			VALUE "FileVersion",		  RC_VERSION
-			VALUE "InternalName",		  NAME
-			VALUE "LegalCopyright",   COPYRIGHT
-			VALUE "License",		      LICENSE
-			VALUE "Homepage",		      HOMEPAGE
-			VALUE "OriginalFilename",	EXE
-			VALUE "ProductName",		  NAME
-			VALUE "ProductVersion",		RC_VERSION
-		END
-	END
+  BLOCK "StringFileInfo"
+  BEGIN
+    BLOCK "040904E4"
+    BEGIN
+    VALUE "FileDescription",  DESCRIPTION
+    VALUE "FileVersion",      VERSION_STRING_FULL
+    VALUE "InternalName",     NAME
+    VALUE "LegalCopyright",   COPYRIGHT
+    VALUE "License",          LICENSE
+    VALUE "Homepage",         HOMEPAGE
+    VALUE "OriginalFilename", EXE
+    VALUE "ProductName",      NAME
+    VALUE "ProductVersion",   VERSION_STRING_FULL
+    END
+  END
 
-	BLOCK "VarFileInfo"
-	BEGIN
-		VALUE "Translation", 0x409, 1252
-	END
+  BLOCK "VarFileInfo"
+  BEGIN
+    VALUE "Translation", 0x409, 1252
+  END
 END
