Separate main and WinMain to ease doxygen

--- a/project-fractal/CMakeLists.txt
+++ b/project-fractal/CMakeLists.txt
@@ -12,4 +12,12 @@ if (WIN32)
   )
 endif()
 
-target_sources("fractal" PRIVATE ${SRCS})
+set (SRCS_UNIX
+  "main_unix.cpp"
+)
+
+set (SRCS_WIN
+  "main_win.cpp"
+)
+
+target_sources("fractal" PRIVATE ${SRCS} $<IF:${WIN32}, ${SRCS_WIN}, ${SRCS_UNIX}>)
