--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -105,10 +105,11 @@ if(CMAKE_BUILD_TYPE STREQUAL "Release")
   find_package(Doxygen)
   add_custom_target(
     doc ALL
+    COMMAND ${CMAKE_COMMAND} -E remove_directory "${CMAKE_SOURCE_DIR}/docs/doxygen"
     COMMAND ${CMAKE_COMMAND} -E env
       PROJECT_NAME=${PROJECT_NAME}
       PROJECT_DESCRIPTION=${${PROJECT_NAME}_DESCRIPTION}
-      ${DOXYGEN_EXECUTABLE} "docs/doxyfile"
+      ${DOXYGEN_EXECUTABLE} "${CMAKE_SOURCE_DIR}/docs/doxyfile"
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
     COMMENT "Generating API documentation with Doxygen"
     DEPENDS "${VERSION_DEPENDENCY}"
