Fixed empty string to boolean cast

--- a/project-fractal/CMakeLists.txt
+++ b/project-fractal/CMakeLists.txt
@@ -20,4 +20,4 @@ set (SRCS_WIN
   "main_win.cpp"
 )
 
-target_sources("fractal" PRIVATE ${SRCS} $<IF:${WIN32}, ${SRCS_WIN}, ${SRCS_UNIX}>)
+target_sources("fractal" PRIVATE ${SRCS} $<IF:$<BOOL:${WIN32}>, ${SRCS_WIN}, ${SRCS_UNIX}>)
