--- a/project-installer/CMakeLists.txt
+++ b/project-installer/CMakeLists.txt
@@ -9,4 +9,4 @@ set (SRCS_WIN
   "main_win.cpp"
 )
 
-target_sources("installer" PRIVATE ${SRCS} $<IF:${WIN32}, ${SRCS_WIN}, ${SRCS_UNIX}>)
+target_sources("installer" PRIVATE ${SRCS} $<IF:$<BOOL:${WIN32}>, ${SRCS_WIN}, ${SRCS_UNIX}>)
