--- a/project-installer/CMakeLists.txt
+++ b/project-installer/CMakeLists.txt
@@ -1,12 +1,11 @@
 set (SRCS
+  "main.cpp"
 )
 
 set (SRCS_UNIX
-  "main_unix.cpp"
 )
 
 set (SRCS_WIN
-  "main_win.cpp"
 )
 
 target_sources("installer" PRIVATE ${SRCS} $<IF:$<BOOL:${WIN32}>, ${SRCS_WIN}, ${SRCS_UNIX}>)
