Added GUI/console support to SetupProject

--- a/tools/templates/CMakeLists.txt
+++ b/tools/templates/CMakeLists.txt
@@ -3,9 +3,11 @@ set (SRCS
 )
 
 set (SRCS_UNIX
+  "main_unix.cpp"
 )
 
 set (SRCS_WIN
+  "main_win.cpp"
 )
 
 target_sources("TARGET" PRIVATE ${SRCS} $<IF:$<BOOL:${WIN32}>, ${SRCS_WIN}, ${SRCS_UNIX}>)
